fix saveAll method